removed androidplot javadoc link; continued implementation of SinusTest with GraphView, working except auto-refresh

--- a/CardioDataViewer/res/layout/main_activity.xml
+++ b/CardioDataViewer/res/layout/main_activity.xml
@@ -26,8 +26,7 @@
         android:id="@+id/graphLayout"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:keepScreenOn="true">
+        android:layout_height="match_parent" >
     </LinearLayout>
 
     <!--
